--- a/config/environment.js.sample
+++ b/config/environment.js.sample
@@ -22,14 +22,6 @@ module.exports = function(environment) {
     }
   };
 
-  if (environment === 'development') {
-    // ENV.APP.LOG_RESOLVER = true;
-    // ENV.APP.LOG_ACTIVE_GENERATION = true;
-    // ENV.APP.LOG_TRANSITIONS = true;
-    // ENV.APP.LOG_TRANSITIONS_INTERNAL = true;
-    // ENV.APP.LOG_VIEW_LOOKUPS = true;
-  }
-
   if (environment === 'test') {
     // Testem prefers this...
     ENV.baseURL = '/';
@@ -42,8 +34,12 @@ module.exports = function(environment) {
     ENV.APP.rootElement = '#ember-testing';
   }
 
-  if (environment === 'production') {
+  if (environment === 'development') {
+    ENV.APP.serviceURL = 'http://<address to back-end>';
+  }
 
+  if (environment === 'production') {
+    ENV.APP.serviceURL = 'http://<address to back-end>';
   }
 
   return ENV;
